partners add login

--- a/app/views/layouts/partners.html.erb
+++ b/app/views/layouts/partners.html.erb
@@ -10,13 +10,15 @@
   </head>
   <body>
       <div id="wrapper">
-        <!-- Navigation -->
-        <%= render :partial => "layouts/partners_nav" %>
-        <div id="page-wrapper">
+        <%= flash[:notice] %>
+        <% if @admintag %>
+          <%= render :partial => "layouts/partners_nav" %>
+          <div id="page-wrapper">
+            <%= yield %>
+          </div>
+        <% else %>
           <%= yield %>
-        </div>
-        <!-- /#page-wrapper -->
+        <% end %>
       </div>
-      <!-- /#wrapper -->
   </body>
 </html>
