--- a/app/views/layouts/_partners_nav.html.erb
+++ b/app/views/layouts/_partners_nav.html.erb
@@ -11,6 +11,22 @@
     </div>
   </div>
 
+  <ul class="nav navbar-top-links navbar-right">
+    <li class="dropdown">
+      <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+        <i class="fa fa-user fa-fw"></i> <%= @admintag.tag %>  <i class="fa fa-caret-down"></i>
+      </a>
+      <ul class="dropdown-menu dropdown-user">
+<!--         <li>
+          <%= link_to "edit_password", marketing_dashboard_edit_password_path %>
+        </li> -->
+        <li>
+          <a href="/partners/sign_out"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+        </li>
+      </ul>
+    </li>
+  </ul>
+
   <div class="navbar-default sidebar" role="navigation">
     <div class="sidebar-nav navbar-collapse">
       <ul class="nav" id="side-menu">
