--- a/client/assets/stylesheets/campaign/activity/form.scss
+++ b/client/assets/stylesheets/campaign/activity/form.scss
@@ -26,3 +26,15 @@
     }
   }
 }
+
+.creat-content-sources .perBudget-area {
+  display: inline-block;
+  padding: 0;
+  margin-left: 10px;
+  vertical-align: middle;
+}
+
+.creat-content-sources .sources-check .perBudget-area .spinner-box {
+  width: auto;
+  height: auto;
+}
