update elastic articles kols

--- a/app/views/marketing_dashboard/elastic_articles/index.html.erb
+++ b/app/views/marketing_dashboard/elastic_articles/index.html.erb
@@ -74,7 +74,7 @@
         <th>Content ID</th>
         <th>Title</th>
         <th>标签</th>
-        <th class="text-center">阅读总时长</th>
+        <th class="text-center">阅读总时长(小时)</th>
         <th class="text-center">阅读次数</th>
         <th class="text-center">点赞次数</th>
         <th class="text-center">分享次数</th>
