--- a/app/assets/stylesheets/marketing_dashboard/campaigns.scss
+++ b/app/assets/stylesheets/marketing_dashboard/campaigns.scss
@@ -19,20 +19,20 @@
 }
 
 .file-upload__label:hover {
-   cursor: pointer;
-   background: #234E72;
+  cursor: pointer;
+  background: #234E72;
 }
 
 .file-upload__input {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    font-size: 1;
-    width:0;
-    height: 100%;
-    opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  font-size: 1;
+  width:0;
+  height: 100%;
+  opacity: 0;
 }
 
 .header {
@@ -41,4 +41,14 @@
 
 .form-control {
   width: 100%;
+}
+
+.file-upload-preview {
+  height: 180px;
+  margin-bottom: 10px;
+  text-align: center;
+  background-color: #f8f8f8;
+}
+.file-upload-preview > .preview {
+  height: 180px;
 }
