--- a/app/assets/stylesheets/marketing_dashboard/campaigns.scss
+++ b/app/assets/stylesheets/marketing_dashboard/campaigns.scss
@@ -44,11 +44,24 @@
 }
 
 .file-upload-preview {
-  height: 180px;
+  position: relative;
+  width: 100%;
+  // height: 667px;
+  padding-bottom: 177.86%;
   margin-bottom: 10px;
   text-align: center;
   background-color: #f8f8f8;
 }
 .file-upload-preview > .preview {
-  height: 180px;
+  // height: 667px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
