--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -416,6 +416,9 @@
             </li>
           </ul>
         </li>
+        <li>
+            <%= link_to '系统活动、公告', marketing_dashboard_announcements_path %>
+        </li>
 
       </ul>
       <br/><br/><br/>
