--- a/app/views/marketing_dashboard/announcements/_form.html.erb
+++ b/app/views/marketing_dashboard/announcements/_form.html.erb
@@ -28,6 +28,9 @@
     <label for="inputPassword3" class="col-sm-2 control-label">Banner图片</label>
     <div class="col-sm-10">
       <%= f.file_field :banner, :class => "form-control" %>
+      <% if @announcement.banner_url.present? %>
+        <%= image_tag @announcement.banner_url, width: 100, height: 100 %>
+      <% end %>
     </div>
   </div>
   <div class="form-group">
