--- a/app/views/marketing_dashboard/elastic_articles/kols.html.erb
+++ b/app/views/marketing_dashboard/elastic_articles/kols.html.erb
@@ -11,7 +11,7 @@
     <div class="panel panel-success">
       <div class="panel-heading text-right">
         <div>
-          <span class="huge"><%= format_hour($redis.get('elastic_article_show_time')) %></span>小时
+          <span class="huge"><%= $redis.get('elastic_article_show_time') %></span>
         </div>
         <div>发现Tab停留时长</div>
       </div>
@@ -78,7 +78,7 @@
         <th>昵称</th>
         <th>手机</th>
         <th>邮箱</th>
-        <th class="text-center">阅读总时长(小时)</th>
+        <th class="text-center">阅读总时长(/时/分/秒)</th>
         <th class="text-center">阅读次数</th>
         <th class="text-center">点赞次数</th>
         <th class="text-center">分享次数</th>
@@ -92,7 +92,7 @@
           <td><%= kol.name %></td>
           <td><%= kol.mobile_number %></td>
           <td><%= kol.email %></td>
-          <td class="text-center"><%= format_hour(kol.redis_elastic_stay_time) %></td>
+          <td class="text-center"><%= format_hms(kol.redis_elastic_stay_time.value) %></td>
           <td class="text-center"><%= kol.redis_elastic_reads_count %></td>
           <td class="text-center"><%= kol.redis_elastic_likes_count %></td>
           <td class="text-center"><%= kol.redis_elastic_forwards_count %></td>
