--- a/app/views/marketing_dashboard/elastic_articles/index.html.erb
+++ b/app/views/marketing_dashboard/elastic_articles/index.html.erb
@@ -6,28 +6,7 @@
 </div>
 
 <!-- /.row -->
-<div class="row">
-  <div class="col-lg-3 col-md-6">
-    <div class="panel panel-success">
-      <div class="panel-heading text-right">
-        <div>
-          <span class="huge"><%= $redis.get('elastic_article_show_time') %></span>
-        </div>
-        <div>发现Tab停留时长</div>
-      </div>
-    </div>
-  </div>
-  <div class="col-lg-3 col-md-6">
-    <div class="panel panel-info">
-      <div class="panel-heading text-right">
-        <div>
-          <span class="huge"><%= $redis.get('elastic_article_show_count') %></span>次
-        </div>
-        <div>发现Tab打开次数</div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render 'statistics' %>
 
 <div class="panel panel-default">
   <div class="panel-heading">
