--- a/app/views/partner_campaign/campaign.html.erb
+++ b/app/views/partner_campaign/campaign.html.erb
@@ -200,7 +200,7 @@
         <button class=" btn-blue-ro width100" onclick="closeDialog('dialog02')">知道了</button>
       </div>
     </div>
-    <section class="content-ro" style="overflow: auto; position: fixed; bottom: 0">
+    <section class="content-ro" style="overflow: auto; position: fixed; padding: 10px; bottom: 10%; background-color: rgba(255, 255, 255, .9); box-shadow: 0 0 10px rgba(0,0,0,.6); z-index: 10;">
       <section class="content-ro" style="height: 6rem; margin-bottom: 0;">
         <h2 class="title-ro" style="border: 1px solid #6a6a6a;
         padding-top: 10px; padding-bottom: 10px; color: #6a6a6a;
