--- a/app/views/partner_campaign/campaign.html.erb
+++ b/app/views/partner_campaign/campaign.html.erb
@@ -112,7 +112,7 @@
       <div class="dia-content" style="text-align: center;">
         <% unless request.user_agent =~ /MicroMessenger/ %>
           <h2 class="title-ro">截图后去微信扫一扫！</h2>
-          <%= raw Rails.cache.fetch("partner_campaign/alizhongbao/#{params[:userId]}/#{params[:id]}/qr_svg", expires_in: 3.hours){RQRCode::QRCode.new(request.url, size: 12, level: :h).as_svg(module_size: 3)} %>
+          <%= raw Rails.cache.fetch("partner_campaign/alizhongbao/#{params[:userId]}/#{params[:id]}/qr_svg", expires_in: 3.hours){RQRCode::QRCode.new(request.url.gsub(/http/, 'https'), size: 12, level: :h).as_svg(module_size: 3)} %>
         <% else %>
           <% if @campaign_invite.try(:azb_shared) %>
             <h2 class="title-ro">再次分享可以获得更多点击</h2>
