--- a/client/assets/stylesheets/recharge/recharge.scss
+++ b/client/assets/stylesheets/recharge/recharge.scss
@@ -474,6 +474,9 @@
     &.input-small {
       width: 150px;
     }
+    &.points-input {
+      color: #ff6745;
+    }
   }
   .recharge-type-img {
     height: 34px;
