--- a/app/views/marketing_dashboard/campaigns/index.html.erb
+++ b/app/views/marketing_dashboard/campaigns/index.html.erb
@@ -268,6 +268,9 @@
                 <% if c.is_limit_click_count %>
                   <li><%= link_to '解除kol点击限制', lift_kol_level_count_marketing_dashboard_campaign_path(c), method: :put %></li>
                 <% end %>
+                <% if %w(executing executed).include?(c.status) %>
+                  <li><%= link_to ' 点击数据维护', bots_marketing_dashboard_campaign_path(c) %></li>
+                <% end %>
               </ul>
             </div>
             <div class="option-group" role="group">
