--- a/app/views/layouts/partners.html.erb
+++ b/app/views/layouts/partners.html.erb
@@ -1,23 +1,76 @@
+
+
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Robin8 Marketing Dashboard</title>
-    <meta charset='utf-8' />
-    <%= stylesheet_link_tag 'admin' %>
-    <%= javascript_include_tag 'admin' %>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Meta, title, CSS, favicons, etc. -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Robin8 Partners</title>
+
+    <!-- Bootstrap core CSS -->
+    <%= stylesheet_link_tag 'partners/libs/bootstrap.min.css' %>
+    <%= stylesheet_link_tag 'partners/libs/animate.min.css' %>
+    <%= stylesheet_link_tag 'partners/libs/font-awesome.min.css' %>
+    <%= stylesheet_link_tag 'partners/libs/icheck/flat/green.css' %>
+    <%= stylesheet_link_tag 'partners/libs/custom.css' %>
+    
+    <%= stylesheet_link_tag 'partners/partners' %>
+    
+    <%= javascript_include_tag 'partners/libs/jquery.min' %>
     <%= csrf_meta_tag %>
     <%= favicon_link_tag 'favicon.ico' %>
+
+    <!--[if lt IE 9]>
+      <script src="../assets/js/ie8-responsive-file-warning.js"></script>
+    <![endif]-->
+
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
-  <body>
-      <div id="wrapper">
+
+  <body class="nav-md">
+    
+          
         <% if @admintag %>
-          <%= render :partial => "layouts/partners_nav" %>
-          <div id="page-wrapper">
+          <div class="container body">
+      <div class="main_container">
+          <%= render :partial => "layouts/partners_nav2" %>
+          <!-- page content -->
+          <div class="right_col" role="main">
             <%= yield %>
           </div>
+          <!-- /page content -->
+
+          <!-- footer content -->
+          <footer>
+            <div class="pull-right">
+                Powered By Robin<sup>8</sup>
+            </div>
+            <div class="clearfix"></div>
+          </footer>
+          <!-- /footer content -->
+          </div>
+    </div>
         <% else %>
           <%= yield %>
         <% end %>
-      </div>
+      
+
+      
+      <%= javascript_include_tag 'partners/libs/bootstrap.min' %>
+      <%= javascript_include_tag 'partners/libs/progressbar/bootstrap-progressbar.min' %>
+      <%= javascript_include_tag 'partners/libs/icheck/icheck.min' %>
+      <%= javascript_include_tag 'partners/libs/pace/pace.min' %>
+      <%= javascript_include_tag 'partners/libs/custom' %>
+      
+      
+      
   </body>
 </html>
