--- a/client/assets/stylesheets/base.scss
+++ b/client/assets/stylesheets/base.scss
@@ -18,7 +18,8 @@ body {
 
 body {
   color: #181616;
-  font-family: SimHei, "Segoe UI", Helvetica, Arial, "Microsoft YaHei", Arial, sans-serif;
+  // font-family: SimHei, "Segoe UI", Helvetica, Arial, "Microsoft YaHei", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, PingFang SC, Microsoft YaHei, Source Han Sans SC, Noto Sans CJK SC, WenQuanYi Micro Hei, sans-serif;
   font-size: 16px;
 }
 
