--- a/client/assets/stylesheets/recharge/recharge.scss
+++ b/client/assets/stylesheets/recharge/recharge.scss
@@ -15,14 +15,17 @@
         line-height: 60px;
         font-size: 18px;
         width: 320px;
-        border-radius: 5px 5px 0 0;
+        border-radius: 10px 10px 0 0;
         text-decoration: none;
-        color: #181616;
+        font-weight: bold;
+        color: #000;
 
         &:nth-last-child(-n + 2) {
           margin-left: 5px;
-          background-image: url(~recharge_menu_bg.jpg);
-          color: #fff;
+          // background-image: url(~recharge_menu_bg.jpg);
+          background-color: #e9e9e9;
+          font-weight: normal;
+          // color: #fff;
         }
       }
     }
@@ -31,6 +34,7 @@
   .main-content {
     padding-top: 40px;
     background-color: #fff;
+    border-radius: 0 0 10px 10px;
     > div {
       margin-left: 122px;
       width: 756px;
@@ -347,7 +351,8 @@
   .line-title {
     position: relative;
     padding: 2px 24px;
-    font-size: 22px;
+    font-size: 20px;
+    font-weight: bold;
     &:before {
       position: absolute;
       top: 0;
@@ -403,8 +408,9 @@
   margin-top: 20px;
   .infos {
     padding-left: 24px;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: normal;
+    color: #000;
     .sm {
       font-size: 14px;
       color: #4b4b4b;
@@ -414,8 +420,8 @@
     }
   }
   .avatar-img {
-    width: 116px;
-    height: 116px;
+    width: 100px;
+    height: 100px;
     border-radius: 50%;
     border: 1px solid #2dcad0;
   }
@@ -428,12 +434,33 @@
 .recharge-form {
   margin-top: 40px;
   .form-tips {
-    font-size: 12px;
+    font-size: 14px;
+    color: #4b4b4b;
   }
 }
 
 .promotion-banner {
+  position: relative;
   width: 100%;
+  .banner-info {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    padding: 0 24px;
+    font-size: 18px;
+    color: #ff7800;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    .title {
+      font-size: 20px;
+    }
+    .num {
+      padding: 0 6px;
+      font-size: 22px;
+    }
+  }
 }
 .promotion-banner-img {
   width: 100%;
@@ -442,14 +469,18 @@
 .recharge-form-item {
   width: 100%;
   .control-label {
+    float: left;
+    width: 20%;
     line-height: 34px;
     padding-top: 0;
-    padding-right: 0;
+    padding-left: 15px;
     text-align: left;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: normal;
+    color: #000;
     &.label-small {
-      font-size: 12px;
+      font-size: 14px;
+      color: #4b4b4b;
     }
   }
   .control-box {
@@ -491,5 +522,8 @@
       color: rgb(206, 1, 1);
       font-size: 13px;
     }
+  }
+  &.mt40 {
+    margin-top: 40px;
   }
 }
