--- a/client/assets/stylesheets/recharge/summary.scss
+++ b/client/assets/stylesheets/recharge/summary.scss
@@ -1,7 +1,7 @@
 .page-summary {
   .menu {
     margin-top: 45px;
-    width: 1000px;
+    // width: 1000px;
     ul {
 
       height: 60px;
@@ -13,24 +13,30 @@
         line-height: 60px;
         font-size: 18px;
         width: 320px;
-        border-radius: 5px 5px 0 0;
+        border-radius: 10px 10px 0 0;
         text-decoration: none;
+        font-weight: bold;
+        color: #000;
 
         &:nth-child(1) {
-          background-image: url(~recharge_menu_bg.jpg);
-          color: #fff;
+          // background-image: url(~recharge_menu_bg.jpg);
+          // color: #fff;
+          background-color: #e9e9e9;
+          font-weight: normal;
         }
 
         &:nth-child(2) {
           margin-left: 5px;
           background-color: #fff;
-          color: #181616;
+          // color: #181616;
         }
 
         &:nth-child(3) {
           margin-left: 5px;
-          background-image: url(~recharge_menu_bg.jpg);
-          color: #fff;
+          // background-image: url(~recharge_menu_bg.jpg);
+          // color: #fff;
+          background-color: #e9e9e9;
+          font-weight: normal;
         }
       }
     }
@@ -41,6 +47,7 @@
     padding-bottom: 60px;
     padding-left: 70px;
     background-color: #fff;
+    border-radius: 0 0 10px 10px;
 
     .cost-text {
       > span {
