--- a/app/views/layouts/_partners_nav2.html.erb
+++ b/app/views/layouts/_partners_nav2.html.erb
@@ -30,32 +30,32 @@
 
       <div class="menu_section">
         <h3>General</h3>
-        
+
         <ul class="nav side-menu">
-          
+
           <li>
             <%= link_to partners_kols_path do %>
-              <i class="fa fa-users"></i> KOL 
+              <i class="fa fa-users"></i> KOL
             <% end %>
           </li>
           <li>
             <%= link_to partners_campaigns_path do %>
-              <i class="fa fa-star"></i> 参与活动 
+              <i class="fa fa-star"></i> 参与活动
             <% end %>
           </li>
           <li>
             <%= link_to partners_campaign_invites_path do %>
-              <i class="fa fa-picture-o"></i> 截图 
+              <i class="fa fa-picture-o"></i> 截图
             <% end %>
           </li>
           <li>
             <%= link_to partners_kol_management_index_path do %>
-              <i class="fa fa-users"></i> KOL Managements 
+              <i class="fa fa-users"></i> KOL Managements
             <% end %>
           </li>
         </ul>
       </div>
-      
+
 
     </div>
     <!-- /sidebar menu -->
@@ -88,14 +88,24 @@
         <a id="menu_toggle"><i class="fa fa-bars"></i></a>
       </div>
 
+
       <ul class="nav navbar-nav navbar-right">
+        <a href="<%= @enLink %>">En</a>
+        <a href="<%= @zhLink %>">中文</a>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+
+
+
         <li class="">
-            
+
+
           <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             <%= image_tag("partners/user.png") %> Geometry
             <span class=" fa fa-angle-down"></span>
           </a>
-           
+
           <ul class="dropdown-menu dropdown-usermenu pull-right">
             <!-- <li><a href="javascript:;">  Profile</a>
             </li>
