--- a/app/views/layouts/_partners_nav.html.erb
+++ b/app/views/layouts/_partners_nav.html.erb
@@ -31,6 +31,11 @@
     <div class="sidebar-nav navbar-collapse">
       <ul class="nav" id="side-menu">
         <li>
+          <%#= link_to "Dashboard", partners_dashboard_path %>
+          <!-- TODO: will need change to partners_dashboard_path later -->
+          <a href="/partners/dashboard">Dashboard</a>
+        </li>
+        <li>
           <%= link_to "Kol", partners_kols_path %>
         </li>
         <li>
