--- a/app/views/partners/dashboard/_chart8.html.erb
+++ b/app/views/partners/dashboard/_chart8.html.erb
@@ -1,6 +1,6 @@
 <div class="card mb-12">
   <div class="card-header">
-    <i class="fa fa-bar-chart"></i> Bar Chart Example
+
   </div>
   <div class="card-body">
     <div class="row">
@@ -9,7 +9,7 @@
       </div>
     </div>
   </div>
-  <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+  <div class="card-footer small text-muted"><i class="fa fa-bar-chart"></i>用户标签统计</div>
 </div>
 
 <script type="text/javascript">
@@ -33,14 +33,15 @@
       data: {
         labels: chartlabels, //["January", "February", "March", "April", "May"],
         datasets: [{
-          label: "Tags Distribution",
+          label: "用户标签统计",
           //   backgroundColor: "rgba(2,117,216,1)",
           backgroundColor: [
-            'rgba(255, 99, 132, 0.2)',
-            'rgba(54, 162, 235, 0.2)',
-            'rgba(255, 206, 86, 0.2)',
-            'rgba(153, 102, 255, 0.2)',
-            'rgba(255, 159, 64, 0.2)'
+          //  #007bff","#dc3545","#ffc107","#28a745"
+            'rgba(0, 93, 255, 0.8)',
+            'rgba(208, 53, 69, 0.8)',
+            'rgba(255, 193, 7, 0.8)',
+            'rgba(40, 107, 69, 0.8)',
+            'rgba(0, 159, 255, 0.8)'
           ],
           borderColor: "rgba(2,117,216,1)",
           data: chartData, //[4215, 5312, 6251, 7841, 9821],
@@ -49,14 +50,14 @@
       options: {
         scales: {
           xAxes: [{
-            time: {
-              unit: 'month'
-            },
+
             gridLines: {
-              display: false
+              display: true
             },
             ticks: {
+             // max: 100,
               maxTicksLimit: 6
+
             }
           }],
           yAxes: [{
@@ -71,7 +72,7 @@
           }],
         },
         legend: {
-          display: true
+          display: false
         }
       }
     });
