--- a/app/views/marketing_dashboard/utilities/promotions/_form.html.erb
+++ b/app/views/marketing_dashboard/utilities/promotions/_form.html.erb
@@ -21,6 +21,12 @@
     </div>
   </div>
 
+  <div class="form-group">
+    <label for="inputPassword3" class="col-sm-3 control-label">有效天数</label>
+    <div class="col-sm-8">
+      <%= f.number_field :valid_days_count, :class => "form-control" %>
+    </div>
+  </div>
 
   <div class="form-group">
     <label for="inputPassword3" class="col-sm-3 control-label">说明</label>
