--- a/client/assets/stylesheets/recharge/recharge.scss
+++ b/client/assets/stylesheets/recharge/recharge.scss
@@ -425,6 +425,9 @@
     border-radius: 50%;
     border: 1px solid #2dcad0;
   }
+  .company-name {
+    margin-right: 20px;
+  }
 }
 
 .recharge-content {
