--- a/app/views/marketing_dashboard/kols/show.html.erb
+++ b/app/views/marketing_dashboard/kols/show.html.erb
@@ -182,6 +182,10 @@
       </ul>
     </td>
   </tr>
+  <tr>
+    <td>KOL点击banner次数</td>
+    <td><%= @kol.redis_announcement_clicks_count.value %></td>
+  </tr>
 </table>
 
 
